--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "node-sass": "^7.0.3",
     "register-service-worker": "^1.7.2",
+    "uuid": "^9.0.0",
     "vue": "^2.6.14",
     "vuex": "^3.6.2"
   },
