--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "node-sass": "^7.0.3",
     "register-service-worker": "^1.7.2",
+    "uuid": "^9.0.0",
     "vue": "^2.6.14",
     "vuex": "^3.6.2"
   },
@@ -34,9 +36,12 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
+    "jsdom": "^20.0.1",
+    "jsdom-global": "^3.0.2",
     "prettier": "^2.4.1",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0",
+    "sass-loader": "^12.6.0",
+    "style-resources-loader": "^1.5.0",
     "vue-template-compiler": "^2.6.14"
   }
 }
