--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
+    "jest-serializer-vue": "^2.0.2",
     "jsdom": "^20.0.1",
     "jsdom-global": "^3.0.2",
     "prettier": "^2.4.1",
@@ -43,5 +44,10 @@
     "sass-loader": "^12.6.0",
     "style-resources-loader": "^1.5.0",
     "vue-template-compiler": "^2.6.14"
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "jest-serializer-vue"
+    ]
   }
 }
