--- a/vue-project/.gitignore
+++ b/vue-project/.gitignore
@@ -1,14 +1,15 @@
 .DS_Store
 node_modules
 /dist
+# /coverage
 
 /tests/e2e/videos/
 /tests/e2e/screenshots/
-/coverage
 
 # local env files
 .env.local
 .env.*.local
+
 
 # Log files
 npm-debug.log*
